--- a/AndroidBootstrap/res/values/attrs.xml
+++ b/AndroidBootstrap/res/values/attrs.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="BootstrapButton">
-        <attr name="type" format="string"/>
-        <attr name="icon_left" format="string"/>
-        <attr name="icon_right" format="string"/>
-        <attr name="roundedCorners" format="boolean"/>
-        <attr name="size" format="string"/>
+        <attr name="bb_type" format="string"/>
+        <attr name="bb_icon_left" format="string"/>
+        <attr name="bb_icon_right" format="string"/>
+        <attr name="bb_roundedCorners" format="boolean"/>
+        <attr name="bb_text_alignment" format="string"/>
+        <attr name="bb_size" format="string"/>
         <attr name="android:textSize"/>
         <attr name="android:text"/>
         <attr name="android:enabled"/>
@@ -13,7 +14,7 @@
     </declare-styleable>
     
      <declare-styleable name="FontAwesomeText">
-        <attr name="icon" format="string"/>
+        <attr name="fa_icon" format="string"/>
         <attr name="android:textSize"/>
         <attr name="android:textColor"/>
 
