--- a/AndroidBootstrapTest/res/layout/bootstrap_button_size_buttons_example.xml
+++ b/AndroidBootstrapTest/res/layout/bootstrap_button_size_buttons_example.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Basic Buttons" />
+        android:text="Sized Buttons" />
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
