--- a/AndroidBootstrap/res/drawable/edittext_background.xml
+++ b/AndroidBootstrap/res/drawable/edittext_background.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">   
-	<solid android:color="@color/white"/> 
-	<stroke android:color="@color/bbutton_edittext_border" android:width="1dp"/>  
-	
-</shape>  
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <item android:state_focused="true"><shape>
+        <solid android:color="@color/white" />
+        <stroke android:width="1dp" android:color="@color/bbutton_primary" />
+    </shape></item>   
+    
+<item><shape android:shape="rectangle">
+        <solid android:color="@color/white" />
+        <stroke android:width="1dp" android:color="@color/bbutton_edittext_border" />
+    </shape></item>
+    
+<item><shape android:shape="rectangle">
+        <solid android:color="@color/white" />
+        <stroke android:width="1dp" android:color="@color/bbutton_edittext_border" />
+    </shape></item>
+
+</selector>
