--- a/AndroidBootstrap/res/drawable/edittext_background_rounded_warning.xml
+++ b/AndroidBootstrap/res/drawable/edittext_background_rounded_warning.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">  
-    
-<item><shape android:shape="rectangle">
+ <item android:state_focused="true"><shape>
         <solid android:color="@color/white" />
         <stroke android:width="2dp" android:color="@color/bbutton_warning" />
+        <corners android:radius="5dp" />
+    </shape></item> 
+<item><shape android:shape="rectangle">
+        <solid android:color="@color/white" />
+        <stroke android:width="1dp" android:color="@color/bbutton_warning" />
         <corners android:radius="5dp" />
     </shape></item>
 
