--- a/AndroidBootstrap/res/values/colors.xml
+++ b/AndroidBootstrap/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="white">#ffffffff</color>
 	<color name="black">#ff000000</color>
 	<color name="bbutton_edittext_border">#ff808080</color>
+	<color name="bbutton_edittext_disabled">#ffe0e0e0</color>
 	
 	<color name="bbutton_primary">#ff428bca</color>
 	<color name="bbutton_primary_edge">#ff357ebd</color>
