--- a/AndroidBootstrap/res/drawable/edittext_background_rounded_danger.xml
+++ b/AndroidBootstrap/res/drawable/edittext_background_rounded_danger.xml
@@ -3,13 +3,13 @@
  <item android:state_focused="true"><shape>
         <solid android:color="@color/white" />
         <stroke android:width="2dp" android:color="@color/bbutton_danger" />
-        <corners android:radius="5dp" />
+        <corners android:radius="@dimen/bbuton_rounded_corner_radius" />
     </shape></item>  
     
 <item><shape android:shape="rectangle">
         <solid android:color="@color/white" />
         <stroke android:width="1dp" android:color="@color/bbutton_danger" />
-        <corners android:radius="5dp" />
+        <corners android:radius="@dimen/bbuton_rounded_corner_radius" />
     </shape></item>
     
     
