changed the default color of EditText border to a light grey(#ccc), the same color Twitter Bootstrap uses

--- a/AndroidBootstrap/res/values/colors.xml
+++ b/AndroidBootstrap/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="white">#ffffffff</color>
 	<color name="black">#ff000000</color>
-	<color name="bbutton_edittext_border">#ff808080</color>
+	<color name="bbutton_edittext_border">#ccc</color>
 	<color name="bbutton_edittext_disabled">#ffe0e0e0</color>
 	
 	<color name="bbutton_primary">#ff428bca</color>
