--- a/AndroidBootstrap/res/values/dimens.xml
+++ b/AndroidBootstrap/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 	<dimen name="bbuton_rounded_corner_radius">5dp</dimen>
+	<dimen name="bthumbnail_padding">8dp</dimen>
 </resources>
