--- a/AndroidBootstrapTest/res/layout/activity_main.xml
+++ b/AndroidBootstrapTest/res/layout/activity_main.xml
@@ -26,6 +26,8 @@
     
  	<include layout="@layout/bootstrap_edit_text_example" />
  	
+ 	<include layout="@layout/bootstrap_thumbnail_example" />
+ 	
  	
     </LinearLayout>
 
