added square thumbnails

--- a/AndroidBootstrap/res/values/attrs.xml
+++ b/AndroidBootstrap/res/values/attrs.xml
@@ -32,6 +32,7 @@
      <declare-styleable name="BootstrapThumbnail">
          <attr name="bt_width" format="integer"/> 
          <attr name="bt_height" format="integer"/>
+         <attr name="bt_roundedCorners" format="boolean"/>
          <attr name="android:text"/>
      </declare-styleable>
     
