--- a/AndroidBootstrapTest/res/layout/bootstrap_thumbnail_example.xml
+++ b/AndroidBootstrapTest/res/layout/bootstrap_thumbnail_example.xml
@@ -24,91 +24,75 @@
             <com.beardedhen.androidbootstrap.BootstrapThumbnail
                 android:id="@+id/thumbnailOne"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                bootstrapthumbnail:bt_width="500"
-                bootstrapthumbnail:bt_height="375" />
+        		android:layout_height="wrap_content"
+                bootstrapthumbnail:bt_width="200dp"
+                bootstrapthumbnail:bt_height="150dp"
+                android:layout_margin="10dp"/>
             
             <com.beardedhen.androidbootstrap.BootstrapThumbnail
                 android:id="@+id/thumbnailTwo"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+        		android:layout_height="wrap_content"
+                bootstrapthumbnail:bt_width="150dp"
+                bootstrapthumbnail:bt_height="110dp"
                 android:layout_margin="10dp"
-                bootstrapthumbnail:bt_width="380"
-                bootstrapthumbnail:bt_height="280" />
+                bootstrapthumbnail:bt_image="@drawable/bbuton_danger"/>
             
             <com.beardedhen.androidbootstrap.BootstrapThumbnail
                 android:id="@+id/thumbnailThree"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                bootstrapthumbnail:bt_width="260"
-                bootstrapthumbnail:bt_height="180" />
+        		android:layout_height="wrap_content"
+                bootstrapthumbnail:bt_width="100dp"
+                bootstrapthumbnail:bt_height="70dp"
+                android:layout_margin="10dp"/>
+
             
             <com.beardedhen.androidbootstrap.BootstrapThumbnail
                 android:id="@+id/thumbnailFour"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+        		android:layout_height="wrap_content"
+                bootstrapthumbnail:bt_width="40dp"
+                bootstrapthumbnail:bt_height="40dp"
                 android:layout_margin="10dp"
-                bootstrapthumbnail:bt_width="140"
-                bootstrapthumbnail:bt_height="140" />
-            
-            <com.beardedhen.androidbootstrap.BootstrapThumbnail
-                android:id="@+id/thumbnailFive"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                bootstrapthumbnail:bt_width="75"
-                bootstrapthumbnail:bt_height="75" />
+                bootstrapthumbnail:bt_image="@drawable/bbuton_primary"/>
             
             <com.beardedhen.androidbootstrap.BootstrapThumbnail
                 android:id="@+id/squareThumbnailOne"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                bootstrapthumbnail:bt_roundedCorners="false"
-                bootstrapthumbnail:bt_width="500"
-                bootstrapthumbnail:bt_height="375" />
+        		android:layout_height="wrap_content"
+                bootstrapthumbnail:bt_width="200dp"
+                bootstrapthumbnail:bt_height="150dp"
+                android:layout_margin="10dp"              
+                bootstrapthumbnail:bt_roundedCorners="false"/>
             
             <com.beardedhen.androidbootstrap.BootstrapThumbnail
                 android:id="@+id/squareThumbnailTwo"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+        		android:layout_height="wrap_content"
+                bootstrapthumbnail:bt_width="150dp"
+                bootstrapthumbnail:bt_height="110dp"
                 android:layout_margin="10dp"
-                bootstrapthumbnail:bt_roundedCorners="false"
-                bootstrapthumbnail:bt_width="380"
-                bootstrapthumbnail:bt_height="280" />
+                 bootstrapthumbnail:bt_image="@drawable/bbuton_success"
+                bootstrapthumbnail:bt_roundedCorners="false"/>
             
             <com.beardedhen.androidbootstrap.BootstrapThumbnail
                 android:id="@+id/squareThumbnailThree"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                bootstrapthumbnail:bt_roundedCorners="false"
-                bootstrapthumbnail:bt_width="260"
-                bootstrapthumbnail:bt_height="180" />
+        		android:layout_height="wrap_content"
+                bootstrapthumbnail:bt_width="100dp"
+                bootstrapthumbnail:bt_height="70dp"
+                android:layout_margin="10dp"              
+                bootstrapthumbnail:bt_roundedCorners="false"/>
             
             <com.beardedhen.androidbootstrap.BootstrapThumbnail
                 android:id="@+id/squareThumbnailFour"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+        		android:layout_height="wrap_content"
+                bootstrapthumbnail:bt_width="40dp"
+                bootstrapthumbnail:bt_height="40dp"
                 android:layout_margin="10dp"
-                bootstrapthumbnail:bt_roundedCorners="false"
-                bootstrapthumbnail:bt_width="140"
-                bootstrapthumbnail:bt_height="140" />
-            
-            <com.beardedhen.androidbootstrap.BootstrapThumbnail
-                android:id="@+id/squareThumbnailFive"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                bootstrapthumbnail:bt_roundedCorners="false"
-                bootstrapthumbnail:bt_width="75"
-                bootstrapthumbnail:bt_height="75" />
-
-            
-
-           
+                bootstrapthumbnail:bt_roundedCorners="false" />
+                           
         </LinearLayout>
 	</HorizontalScrollView>
 
