added attribute to change inside padding on thumbnails

--- a/AndroidBootstrap/res/values/attrs.xml
+++ b/AndroidBootstrap/res/values/attrs.xml
@@ -34,8 +34,8 @@
          <attr name="bt_image" format="integer"/>
          <attr name="bt_width" format="dimension"/>
          <attr name="bt_height" format="dimension"/>
+         <attr name="bt_inside_padding" format="dimension"/>
          <attr name="android:text"/>
-         <attr name="android:padding"/>
      </declare-styleable>
     
 </resources>
