BootstrapButton fill_parent and match_parent sizes

--- a/AndroidBootstrap/res/values/attrs.xml
+++ b/AndroidBootstrap/res/values/attrs.xml
@@ -7,10 +7,11 @@
         <attr name="bb_roundedCorners" format="boolean"/>
         <attr name="bb_text_alignment" format="string"/>
         <attr name="bb_size" format="string"/>
+        <attr name="bb_text_gravity" format="string"/>
         <attr name="android:textSize"/>
         <attr name="android:text"/>
         <attr name="android:enabled"/>
-
+		<attr name="android:layout_width"/>
     </declare-styleable>
     
      <declare-styleable name="FontAwesomeText">
