--- a/AndroidBootstrapTest/res/layout/activity_main.xml
+++ b/AndroidBootstrapTest/res/layout/activity_main.xml
@@ -12,6 +12,17 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
     
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        	android:id="@+id/btnBig"
+             android:layout_width="fill_parent"
+             android:layout_height="200dp"
+             android:layout_margin="10dp"
+             android:text="Primary"
+             bootstrapbutton:bb_icon_right="fa-cloud"
+             bootstrapbutton:bb_roundedCorners="true"
+             bootstrapbutton:bb_type="primary"
+             bootstrapbutton:bb_text_gravity="right" />
+    
     <include layout="@layout/font_awesome_text_example" />
     
     <include layout="@layout/bootstrap_button_basic_buttons_example" />
