added circle thumbnails and minimal circle thumbnails

--- a/AndroidBootstrap/res/values/attrs.xml
+++ b/AndroidBootstrap/res/values/attrs.xml
@@ -38,6 +38,13 @@
          <attr name="bt_inside_padding" format="dimension"/>
          <attr name="android:text"/>
      </declare-styleable>
+
+    <declare-styleable name="BootstrapCircleThumbnail">
+        <attr name="bct_image" format="integer"/>
+        <attr name="bct_size" format="string" />
+        <attr name="bct_minimal" format="boolean" />
+        <attr name="android:text"/>
+    </declare-styleable>
     
 </resources>
 
