--- a/AndroidBootstrapTest/res/layout/activity_main.xml
+++ b/AndroidBootstrapTest/res/layout/activity_main.xml
@@ -38,6 +38,8 @@
  	<include layout="@layout/bootstrap_edit_text_example" />
  	
  	<include layout="@layout/bootstrap_thumbnail_example" />
+
+    <include layout="@layout/bootstrap_thumbnail_circle_example" />
  	
  	
     </LinearLayout>
