--- a/AndroidBootstrap/res/layout/bootstrap_thumbnail.xml
+++ b/AndroidBootstrap/res/layout/bootstrap_thumbnail.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:id="@+id/container"
     android:duplicateParentState="true"
-    android:padding="@dimen/bthumbnail_padding"
+    android:padding="@dimen/padding_small"
     android:orientation="horizontal">
 
     <LinearLayout
