--- a/AndroidBootstrap/res/values/attrs.xml
+++ b/AndroidBootstrap/res/values/attrs.xml
@@ -6,18 +6,20 @@
         <attr name="bb_icon_right" format="string"/>
         <attr name="bb_roundedCorners" format="boolean"/>
         <attr name="bb_text_alignment" format="string"/>
-        <attr name="bb_size" format="string" />
+        <!--attr name="bb_size" format="string" /-->
 
-		<!--attr name="bb_size" format="integer">
+		<attr name="bb_size">
 			<enum name="btn_xs" value="0"/>
 			<enum name="xsmall" value="0"/>
 
 			<enum name="btn_sm" value="1"/>
 			<enum name="small" value="1"/>
 
-			<enum name="btn_lg" value="2"/>
-			<enum name="large" value="2"/>
-		</attr-->
+			<enum name="btn_def" value="2"/>
+
+			<enum name="btn_lg" value="3"/>
+			<enum name="large" value="3"/>
+		</attr>
 
         <attr name="bb_text_gravity" format="string"/>
         <attr name="android:textSize"/>
