--- a/AndroidBootstrapTest/res/layout/activity_main.xml
+++ b/AndroidBootstrapTest/res/layout/activity_main.xml
@@ -1,8 +1,6 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
-    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
@@ -26,7 +24,9 @@
     <include layout="@layout/font_awesome_text_example" />
     
     <include layout="@layout/bootstrap_button_basic_buttons_example" />
-    
+
+	<include layout="@layout/bootstrap_button_rotating_icon_example" />
+
     <include layout="@layout/bootstrap_button_rounded_buttons_example" />
     
     <include layout="@layout/bootstrap_button_disabled_buttons_example" />
