--- a/AndroidBootstrap/res/layout/bootstrap_button.xml
+++ b/AndroidBootstrap/res/layout/bootstrap_button.xml
@@ -1,40 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/layout"
     android:duplicateParentState="true"
-    android:paddingTop="10dp"
+    android:orientation="horizontal"
     android:paddingBottom="10dp"
-    android:orientation="horizontal">
-    
-    <TextView
-     android:id="@+id/lblLeft"   
-     android:layout_height="wrap_content"
-     android:layout_width="wrap_content"
-     android:paddingLeft="15dp"
-     android:visibility="gone"
-     android:layout_gravity="center_vertical"
-    />
+    android:paddingTop="10dp" >
 
     <TextView
-     android:id="@+id/lblMiddle"   
-     android:layout_height="wrap_content"
-     android:layout_width="fill_parent"
-     android:paddingLeft="15dp"
-     android:paddingRight="15dp"
-     android:layout_gravity="center"
-     android:gravity="center_horizontal"
-     android:visibility="gone"
-    />
-    
-	<TextView
-     android:id="@+id/lblRight"   
-     android:layout_height="wrap_content"
-     android:layout_width="wrap_content"
-     android:paddingRight="15dp"
-     android:visibility="gone"
-     android:layout_gravity="center_vertical"
-    />
+        android:id="@+id/lblLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/lblMiddle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/lblRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:paddingRight="15dp"
+        android:visibility="gone" />
 
 </LinearLayout>
