--- a/AndroidBootstrapTest/res/layout/activity_main.xml
+++ b/AndroidBootstrapTest/res/layout/activity_main.xml
@@ -1,47 +1,45 @@
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
     xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
-<LinearLayout 
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
-    
-    <com.beardedhen.androidbootstrap.BootstrapButton
-        	android:id="@+id/btnBig"
-             android:layout_width="fill_parent"
-             android:layout_height="200dp"
-             android:layout_margin="10dp"
-             android:text="Primary"
-             bootstrapbutton:bb_icon_right="fa-cloud"
-             bootstrapbutton:bb_roundedCorners="true"
-             bootstrapbutton:bb_type="primary"
-             bootstrapbutton:bb_text_gravity="right" />
-    
-    <include layout="@layout/font_awesome_text_example" />
-    
-    <include layout="@layout/bootstrap_button_basic_buttons_example" />
-    
-    <include layout="@layout/bootstrap_button_rounded_buttons_example" />
-    
-    <include layout="@layout/bootstrap_button_disabled_buttons_example" />
-    
-    <include layout="@layout/bootstrap_button_other_buttons_example" />
-    
-    <include layout="@layout/bootstrap_button_size_buttons_example" />
-    
- 	<include layout="@layout/bootstrap_edit_text_example" />
- 	
- 	<include layout="@layout/bootstrap_thumbnail_example" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <include layout="@layout/bootstrap_thumbnail_circle_example" />
- 	
- 	
+        <include layout="@layout/font_awesome_text_example" />
+
+        <include layout="@layout/bootstrap_button_basic_buttons_example" />
+
+        <include layout="@layout/bootstrap_button_rounded_buttons_example" />
+
+        <include layout="@layout/bootstrap_button_disabled_buttons_example" />
+
+        <include layout="@layout/bootstrap_button_other_buttons_example" />
+
+        <include layout="@layout/bootstrap_button_size_buttons_example" />
+
+        <include layout="@layout/bootstrap_edit_text_example" />
+
+        <include layout="@layout/bootstrap_thumbnail_example" />
+
+        <include layout="@layout/bootstrap_thumbnail_circle_example" />
+
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:id="@+id/btnBig"
+            android:layout_width="fill_parent"
+            android:layout_height="150dp"
+            android:layout_margin="10dp"
+            android:text="Primary"
+            bootstrapbutton:bb_icon_right="fa-angellist"
+            bootstrapbutton:bb_roundedCorners="true"
+            bootstrapbutton:bb_type="primary"
+            bootstrapbutton:bb_text_gravity="right" />
+
+
     </LinearLayout>
 
 </ScrollView>
