--- a/AndroidBootstrap/res/drawable/edittext_background.xml
+++ b/AndroidBootstrap/res/drawable/edittext_background.xml
@@ -12,7 +12,7 @@
     
 <item><shape android:shape="rectangle">
         <solid android:color="@color/white" />
-        <stroke android:width="1dp" android:color="@color/bbutton_edittext_border" />
+        <stroke android:width="1dp" android:color="@color/bbutton_primary" />
     </shape></item>
 
 </selector>
