--- a/AndroidBootstrap/res/drawable/edittext_background_rounded.xml
+++ b/AndroidBootstrap/res/drawable/edittext_background_rounded.xml
@@ -14,7 +14,7 @@
     
 <item><shape android:shape="rectangle">
         <solid android:color="@color/white" />
-        <stroke android:width="1dp" android:color="@color/bbutton_edittext_border" />
+        <stroke android:width="1dp" android:color="@color/bbutton_primary" />
         <corners android:radius="@dimen/bbuton_rounded_corner_radius" />
     </shape></item>
 
