--- a/AndroidBootstrap/res/layout/bootstrap_button_fill.xml
+++ b/AndroidBootstrap/res/layout/bootstrap_button_fill.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:duplicateParentState="true"
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
