--- a/AndroidBootstrap/res/layout/bootstrap_button.xml
+++ b/AndroidBootstrap/res/layout/bootstrap_button.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:duplicateParentState="true"
     android:orientation="horizontal"
     android:paddingBottom="10dp"
-    android:paddingTop="10dp" >
+    android:paddingTop="10dp">
 
     <TextView
         android:id="@+id/lblLeft"
